--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "tushdev.co",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
-    "sqlite3": "^5.1.7"
+    "better-sqlite3": "^11.1.2",
+    "express": "^4.19.2"
   }
 }
